chore: normalized metadata for administration guide (present, sorted)

--- a/modules/administration-guide/pages/advanced-configuration-options-for-the-che-server-component.adoc
+++ b/modules/administration-guide/pages/advanced-configuration-options-for-the-che-server-component.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Advanced configuration options for {prod-short} server
 :description: Advanced deployment and configuration methods for the {prod-short} server component.
 :keywords: administration guide, configuring, configuration, {prod-short} server
-:page-aliases: installation-guide:advanced-configuration-options-for-the-che-server-component, installation-guide:configuring-system-variables
+:navtitle: Advanced configuration options for {prod-short} server
+:page-aliases: installation-guide:advanced-configuration-options-for-the-che-server-component.adoc, installation-guide:configuring-system-variables.adoc
 
 :parent-context-of-advanced-configuration-options-for-the-che-server-component: {context}
 
