--- a/modules/administration-guide/pages/architecture-overview.adoc
+++ b/modules/administration-guide/pages/architecture-overview.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: Architecture
 :description: High-level {prod-short} architecture
 :keywords: administration-guide, architecture
-:page-aliases: .:che-architecture-overview, .:high-level-che-architecture, overview:high-level-che-architecture, administration-guide:high-level-che-architecture, che-architecture-overview, .:che-architecture-overview-with-che-server, .:high-level-che-architecture-with-che-server, overview:high-level-che-architecture-with-che-server, administration-guide:high-level-che-architecture-with-che-server, .:che-architecture-overview-with-devworkspace, .:high-level-che-architecture-with-devworkspace, overview:high-level-che-architecture-with-devworkspace, administration-guide:high-level-che-architecture-with-devworkspace, architecture-overview-with-devworkspace, architecture-overview-with-che-server, server-components-with-che-server, che-workspaces-architecture-with-che-server, backup-and-recovery, supported-restic-compatible-backup-servers, backing-up-of-che-instances-to-an-sftp-backup-server, backing-up-of-che-instances-to-amazon-s3, backing-up-of-che-instances-to-a-rest-backup-server, backing-up-of-che-instances-to-the-internal-backup-server, restoring-a-che-instance-from-a-backup, backups-of-persistent-volumes, backups-of-postgresql, migration-from-postgresql-9-to-postgresql-13, readiness-init-containers, enabling-and-disabling-readiness-init-containers-for-the-operator-installer, enabling-readiness-init-containers-for-the-operator-installer, disabling-readiness-init-containers-for-the-operator-installer, enabling-and-disabling-readiness-init-containers-for-the-olm-installer, enabling-readiness-init-containers-for-the-olm-installer, disabling-readiness-init-containers-for-the-olm-installer, overview:architecture-overview, overview:che-architecture
+:navtitle: Architecture
+:page-aliases: .:che-architecture-overview.adoc, .:high-level-che-architecture.adoc, overview:high-level-che-architecture.adoc, administration-guide:high-level-che-architecture.adoc, che-architecture-overview.adoc, .:che-architecture-overview-with-che-server.adoc, .:high-level-che-architecture-with-che-server.adoc, overview:high-level-che-architecture-with-che-server.adoc, administration-guide:high-level-che-architecture-with-che-server.adoc, .:che-architecture-overview-with-devworkspace.adoc, .:high-level-che-architecture-with-devworkspace.adoc, overview:high-level-che-architecture-with-devworkspace.adoc, administration-guide:high-level-che-architecture-with-devworkspace.adoc, architecture-overview-with-devworkspace.adoc, architecture-overview-with-che-server, server-components-with-che-server.adoc, che-workspaces-architecture-with-che-server.adoc, backup-and-recovery.adoc, supported-restic-compatible-backup-servers.adoc, backing-up-of-che-instances-to-an-sftp-backup-server.adoc, backing-up-of-che-instances-to-amazon-s3.adoc, backing-up-of-che-instances-to-a-rest-backup-server.adoc, backing-up-of-che-instances-to-the-internal-backup-server.adoc, restoring-a-che-instance-from-a-backup.adoc, backups-of-persistent-volumes.adoc, backups-of-postgresql.adoc, migration-from-postgresql-9-to-postgresql-13.adoc, readiness-init-containers.adoc, enabling-and-disabling-readiness-init-containers-for-the-operator-installer.adoc, enabling-readiness-init-containers-for-the-operator-installer.adoc, disabling-readiness-init-containers-for-the-operator-installer.adoc, enabling-and-disabling-readiness-init-containers-for-the-olm-installer.adoc, enabling-readiness-init-containers-for-the-olm-installer.adoc, disabling-readiness-init-containers-for-the-olm-installer.adoc, overview:architecture-overview.adoc, overview:che-architecture.adoc
 
 [id="architecture_{context}"]
 = {prod-short} architecture
@@ -37,4 +37,3 @@ Controls access to all resources.
 * link:https://github.com/devfile/devworkspace-operator[{devworkspace} Operator repository]
 
 include::example$snip_che-architecture-overview-with-devworkspace-additional-resources.adoc[]
-
