--- a/modules/administration-guide/pages/branding.adoc
+++ b/modules/administration-guide/pages/branding.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Branding
-:description: Branding the Che-Theia
+:description: Branding {prod}
 :keywords: administration-guide, branding
-:page-aliases: 
+:navtitle: Branding
+:page-aliases:
 
 [id="branding_{context}"]
 = Branding
