--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -1,8 +1,8 @@
 :_content-type: REFERENCE
-:navtitle: Caching images for faster workspace start
 :description: Caching images for faster workspace start
 :keywords: administration-guide, caching-images-for-faster-workspace-start
-:page-aliases: .:caching-images-for-faster-workspace-start
+:navtitle: Caching images for faster workspace start
+:page-aliases: .:caching-images-for-faster-workspace-start.adoc
 
 
 [id="caching-images-for-faster-workspace-start_{context}"]
@@ -77,4 +77,3 @@ The {image-puller-name-short} provides the following parameters for configuratio
 * xref:installing-image-puller-on-openshift-using-cli.adoc[]
 
 * link:https://github.com/che-incubator/{image-puller-repository-name}[{image-puller-name} source code repository]
-
