--- a/modules/administration-guide/pages/che-theia-workspaces.adoc
+++ b/modules/administration-guide/pages/che-theia-workspaces.adoc
@@ -1,11 +1,10 @@
-[id="che-theia-workspaces"]
-// = Che-Theia workspaces
 :_content-type: CONCEPT
-:navtitle: Che-Theia workspaces
 :description: Telemetry overview
 :keywords: che-theia, workspaces
-:page-aliases: extensions:che-theia-workspaces
+:navtitle: Che-Theia workspaces
+:page-aliases: extensions:che-theia-workspaces.adoc
 
+[id="che-theia-workspaces"]
 = Che-Theia workspaces
 
 [id="telemetry-overview_{context}"]
