--- a/modules/administration-guide/pages/collecting-logs-using-chectl.adoc
+++ b/modules/administration-guide/pages/collecting-logs-using-chectl.adoc
@@ -1,8 +1,8 @@
 :_content-type: REFERENCE
-:navtitle: Collecting logs using {prod-cli}
 :description: Collecting logs using {prod-cli}
 :keywords: administration-guide, collecting-logs-using-chectl
-:page-aliases: .:collecting-logs-using-chectl
+:navtitle: Collecting logs using {prod-cli}
+:page-aliases: .:collecting-logs-using-chectl.adoc
 
 [id="collecting-logs-using-{prod-cli}_{context}"]
 = Collecting logs using {prod-cli}
@@ -39,4 +39,3 @@ Logs are automatically collected during the {prod-short} installation when insta
 .Additional resources
 
 * {link-prod-cli-documentation}
-
