--- a/modules/administration-guide/pages/configuring-che-hostname.adoc
+++ b/modules/administration-guide/pages/configuring-che-hostname.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Configuring {prod-short} hostname
 :description: Configuring {prod-short} to use custom hostname
 :keywords: administration guide, configuring, {prod}, {prod-short}, hostname
-:page-aliases: installation-guide:configuring-che-hostname
+:navtitle: Configuring {prod-short} hostname
+:page-aliases: installation-guide:configuring-che-hostname.adoc
 
 [id="configuring-{prod-id-short}-server-hostname_{context}"]
 = Configuring {prod} server hostname
@@ -69,4 +69,3 @@ spec:
 * xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
 
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
-
