--- a/modules/administration-guide/pages/configuring-namespace-provisioning.adoc
+++ b/modules/administration-guide/pages/configuring-namespace-provisioning.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: Configuring {orch-namespace}s
 :description: Configuring user {orch-namespace} provisioning
 :keywords: administration guide, configuring, namespace
-:page-aliases: installation-guide:configuring-namespace-strategies, configuring-namespace-strategies
+:navtitle: Configuring {orch-namespace}s
+:page-aliases: installation-guide:configuring-namespace-strategies.adoc, configuring-namespace-strategies.adoc
 
 [id="configuring-user-{orch-namespace}-provisioning_{context}"]
 = Configuring user {orch-namespace} provisioning
@@ -15,4 +15,3 @@ You can modify {prod-short} behavior by:
 
 * xref:configuring-workspace-target-namespace.adoc[]
 * xref:provisioning-namespaces-in-advance.adoc[]
-
