--- a/modules/administration-guide/pages/configuring-oauth-1-for-bitbucket.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-1-for-bitbucket.adoc
@@ -2,7 +2,7 @@
 :description: Configuring OAuth 1.0 for Bitbucket
 :keywords: configuring-oauth, authorization, bitbucket, oauth-1, oauth-1.0
 :navtitle: Configuring OAuth 1.0 for Bitbucket
-// :page-aliases:
+:page-aliases:
 
 [id="configuring-oauth-1-for-bitbucket_{context}"]
 = Configuring OAuth 1.0 for Bitbucket
