--- a/modules/administration-guide/pages/configuring-oauth-2-for-github.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-github.adoc
@@ -2,7 +2,7 @@
 :description: Configuring OAuth 2.0 for GitHub
 :keywords: configuring-oauth, authorization, github, oauth-2, oauth-2.0
 :navtitle: Configuring OAuth 2.0 for GitHub
-// :page-aliases:
+:page-aliases:
 
 [id="configuring-oauth-2-for-github_{context}"]
 = Configuring OAuth 2.0 for GitHub
