--- a/modules/administration-guide/pages/configuring-observability.adoc
+++ b/modules/administration-guide/pages/configuring-observability.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Configuring observability
 :description: Configuring observability
 :keywords: administration-guide, configuring, observability, logs, monitoring
-:page-aliases: .:retrieving-che-logs, .:viewing-kubernetes-events, viewing-kubernetes-events, .:viewing-plug-in-broker-logs, viewing-plug-in-broker-logs, retrieving-che-logs, viewing-che-server-logs, viewing-external-service-logs, 
+:navtitle: Configuring observability
+:page-aliases: .:retrieving-che-logs.adoc, .:viewing-kubernetes-events.adoc, viewing-kubernetes-events.adoc, .:viewing-plug-in-broker-logs.adoc, viewing-plug-in-broker-logs.adoc, retrieving-che-logs.adoc, viewing-che-server-logs.adoc, viewing-external-service-logs.adoc
 
 [id="configuring-observability_{context}"]
 = Configuring observability
