--- a/modules/administration-guide/pages/configuring-routes.adoc
+++ b/modules/administration-guide/pages/configuring-routes.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Configuring OpenShift Route
 :description: Configuring OpenShift Route
 :keywords: administration guide, configuring, routes
-:page-aliases: installation-guide:configuring-routes
+:navtitle: Configuring OpenShift Route
+:page-aliases: installation-guide:configuring-routes.adoc
 
 [id="configuring-routes_{context}"]
 = Configuring OpenShift Route to work with Router Sharding
