--- a/modules/administration-guide/pages/configuring-the-administrative-user.adoc
+++ b/modules/administration-guide/pages/configuring-the-administrative-user.adoc
@@ -1,6 +1,7 @@
 :_content-type: PROCEDURE
-:navtitle: Configuring the administrative user
+:description: To execute actions that require administrative privileges on {prod-short} server, such as deleting user data, activate a user with administrative privileges.
 :keywords: administration-guide, admin
+:navtitle: Configuring the administrative user
 :page-aliases:
 
 [id="configuring-the-administrative-user_{context}"]
