--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} in a restricted environment
 :description: Installing {prod-short} in a restricted environment
 :keywords: administration guide, installing-che-in-a-restricted-environment, installing-che-in-restricted-environment
-:page-aliases: installation-guide:installing-che-in-restricted-environment, installation-guide:installing-che-in-a-restricted-environment, preparing-a-restricted-environment, configuring-che-to-run-in-a-restricted-environment
+:navtitle: Installing {prod-short} in a restricted environment
+:page-aliases: installation-guide:installing-che-in-restricted-environment.adoc, installation-guide:installing-che-in-a-restricted-environment.adoc, preparing-a-restricted-environment.adoc, configuring-che-to-run-in-a-restricted-environment.adoc
 
 [id="installing-{prod-id-short}-in-a-restricted-environment-on-openshift_{context}"]
 = Installing {prod-short} in a restricted environment on OpenShift
