--- a/modules/administration-guide/pages/installing-che-on-minikube.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube.adoc
@@ -1,9 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} on Minikube
 :description: Installing {prod-short} on Minikube
 :keywords: overview, installing-che-on-minikube
-:page-aliases: installation-guide:installing-che-on-minikube, overview:installing-che-on-minikube
-
+:navtitle: Installing {prod-short} on Minikube
+:page-aliases: installation-guide:installing-che-on-minikube.adoc, overview:installing-che-on-minikube.adoc
 
 [id="installing-{prod-id-short}-on-minikube_{context}"]
 = Installing {prod-short} on Minikube
@@ -50,4 +49,3 @@ $ {prod-cli} server:status
 ----
 $ {prod-cli} dashboard:open
 ----
-
