--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} on OpenShift using the web console
 :description: Installing {prod-short} on OpenShift using the web console
 :keywords: overview, installing, openshift, web console
-:page-aliases: installation-guide:installing-che-on-openshift-4-using-operatorhub, overview:installing-che-on-openshift-4-using-operatorhub, creating-an-instance-of-the-che-operator, installing-che-on-openshift-4-using-operatorhub
+:navtitle: Installing {prod-short} on OpenShift using the web console
+:page-aliases: installation-guide:installing-che-on-openshift-4-using-operatorhub.adoc, overview:installing-che-on-openshift-4-using-operatorhub.adoc, creating-an-instance-of-the-che-operator.adoc, installing-che-on-openshift-4-using-operatorhub.adoc
 
 [id="installing-{prod-id-short}-on-openshift-using-the-web-console_{context}"]
 = Installing {prod-short} on OpenShift using the web console
