--- a/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
+++ b/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} on {rh-os-local}
+:description: You can create a single-node OpenShift cluster for deploying a {prod-short} instance using {rh-os-local}.
 :keywords: overview, installing, installation, local
-:page-aliases: installation-guide:installing-che-on-codeready-containers, overview:installing-che-on-codeready-containers, installing-che-on-codeready-containers
-
+:navtitle: Installing {prod-short} on {rh-os-local}
+:page-aliases: installation-guide:installing-che-on-codeready-containers.adoc, overview:installing-che-on-codeready-containers.adoc, installing-che-on-codeready-containers.adoc
 
 [id="installing-{prod-id-short}-on-red-hat-openshift-local_{context}"]
 = Installing {prod-short} on {rh-os-local}
