--- a/modules/administration-guide/pages/installing-che.adoc
+++ b/modules/administration-guide/pages/installing-che.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Installing {prod-short}
 :description: Installing {prod-short}
 :keywords: administration guide, installing-che
-:page-aliases: installation-guide:installing-che, installation-guide:3-minutes-to-che, overview:3-minutes-to-che, installation-guide:quick-starts, installation-guide:che-quick-starts, .:quick-start.html, overview:che-quick-start, installation-guide:installing-che-on-aws, installation-guide:installing-che-on-docker-desktop, installation-guide:installing-che-on-google-cloud-platform, installation-guide:installing-che-on-kind, installation-guide:installing-che-on-kubespray, installation-guide:installing-che-on-microsoft-azure, installation-guide:installing-che-on-openshift-3-using-the-operator
+:navtitle: Installing {prod-short}
+:page-aliases: installation-guide:installing-che.adoc, installation-guide:3-minutes-to-che.adoc, overview:3-minutes-to-che.adoc, installation-guide:quick-starts.adoc, installation-guide:che-quick-starts.adoc, .:quick-start.html, overview:che-quick-start.adoc, installation-guide:installing-che-on-aws.adoc, installation-guide:installing-che-on-docker-desktop.adoc, installation-guide:installing-che-on-google-cloud-platform.adoc, installation-guide:installing-che-on-kind.adoc, installation-guide:installing-che-on-kubespray.adoc, installation-guide:installing-che-on-microsoft-azure.adoc, installation-guide:installing-che-on-openshift-3-using-the-operator.adoc
 
 [id="installing-{prod-id-short}_{context}"]
 = Installing {prod-short}
@@ -10,4 +10,3 @@
 This section contains instructions to install {prod}.
 
 include::example$snip_{project-context}-installing-che.adoc[]
-
