--- a/modules/administration-guide/pages/managing-identities-and-authorizations.adoc
+++ b/modules/administration-guide/pages/managing-identities-and-authorizations.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Managing identities and authorizations
 :description: Managing identities and authorizations
 :keywords: administration-guide, managing-identities-and-authorizations
-:page-aliases: .:managing-identities-and-authorizations, authenticating-users, authorizing-users, configuring-authorization, configuring-openshift-oauth, configuring-minikube-github-authentication
+:navtitle: Managing identities and authorizations
+:page-aliases: .:managing-identities-and-authorizations.adoc, authenticating-users.adoc, authorizing-users.adoc, configuring-authorization.adoc, configuring-openshift-oauth.adoc, configuring-minikube-github-authentication.adoc
 
 [id="managing-identities-and-authorizations_{context}"]
 = Managing identities and authorizations
