--- a/modules/administration-guide/pages/monitoring-che.adoc
+++ b/modules/administration-guide/pages/monitoring-che.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Monitoring {prod-short} Server
 :description: Monitoring {prod-short} Server
 :keywords: administration-guide, monitoring-che
-:page-aliases: .:monitoring-che, .:tracing-che, tracing-che
+:navtitle: Monitoring {prod-short} Server
+:page-aliases: .:monitoring-che.adoc, .:tracing-che.adoc, tracing-che.adoc
 
 [id="monitoring-{prod-id-short}_{context}"]
 = Monitoring {prod-short} Server
