--- a/modules/administration-guide/pages/monitoring-the-dev-workspace-operator.adoc
+++ b/modules/administration-guide/pages/monitoring-the-dev-workspace-operator.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Monitoring the {devworkspace} Operator
 :description: Monitoring the {devworkspace} Operator
 :keywords: administration-guide, monitoring-the-dev-workspace-operator
-:page-aliases: .:monitoring-the-dev-workspace-operator
+:navtitle: Monitoring the {devworkspace} Operator
+:page-aliases: .:monitoring-the-dev-workspace-operator.adoc
 
 :parent-context-of-monitoring-the-dev-workspace-operator: {context}
 
