--- a/modules/administration-guide/pages/monitoring-with-prometheus-and-grafana.adoc
+++ b/modules/administration-guide/pages/monitoring-with-prometheus-and-grafana.adoc
@@ -1,7 +1,8 @@
-:navtitle: Monitoring with Prometheus and Grafana
+:_content-type: ASSEMBLY
 :description: Monitoring with Prometheus and Grafana
 :keywords: administration-guide, monitoring-with-prometheus-and-grafana
-:page-aliases: .:monitoring-with-prometheus-and-grafana
+:navtitle: Monitoring with Prometheus and Grafana
+:page-aliases: .:monitoring-with-prometheus-and-grafana.adoc
 
 :parent-context-of-monitoring-the-dev-workspace-operator: {context}
 
