--- a/modules/administration-guide/pages/mounting-a-secret-as-a-file-or-an-environment-variable-into-a-container.adoc
+++ b/modules/administration-guide/pages/mounting-a-secret-as-a-file-or-an-environment-variable-into-a-container.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Mounting a Secret or a ConfigMap as a file or an environment variable into a {prod} container
 :description: Mounting a Secret or a ConfigMap as a file or an environment variable into a {prod} container
 :keywords: administration guide, mounting-a-secret-or-a-configmap-as-a-file-or-an-environment-variable-into-a-container
-:page-aliases: installation-guide:mounting-a-secret-or-a-configmap-as-a-file-or-an-environment-variable-into-a-container, installation-guide:mounting-a-secret-as-a-file-or-an-environment-variable-into-a-container
+:navtitle: Mounting a Secret or a ConfigMap as a file or an environment variable into a {prod} container
+:page-aliases: installation-guide:mounting-a-secret-or-a-configmap-as-a-file-or-an-environment-variable-into-a-container.adoc, installation-guide:mounting-a-secret-as-a-file-or-an-environment-variable-into-a-container.adoc
 
 :parent-context-of-mounting-a-secret-or-a-configmap-as-a-file-or-an-environment-variable-into-a-container: {context}
 
