--- a/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
@@ -1,10 +1,8 @@
-[id="the-woopra-telemetry-plugin"]
-// = The Woopra telemetry plugin
 :_content-type: PROCEDURE
-:navtitle: The Woopra telemetry plug-in
 :description: The Woopra telemetry plug-in
 :keywords: extensions, telemetry
-:page-aliases: extensions:the-woopra-telemetry-plug-in
+:navtitle: The Woopra telemetry plug-in
+:page-aliases: extensions:the-woopra-telemetry-plug-in.adoc
 
 [id="the-woopra-telemetry-plugin"]
 
@@ -45,4 +43,3 @@ spec:
 * xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
 
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
-
