--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Upgrading {prod-short} in a restricted environment
 :description: Upgrading {prod-short} in a restricted environment
 :keywords: Upgrading {prod-short} in a restricted environment
-:page-aliases: installation-guide:upgrading-che-using-the-cli-management-tool-in-restricted-environment, installation-guide:upgrading-che-in-restricted-environment
+:navtitle: Upgrading {prod-short} in a restricted environment
+:page-aliases: installation-guide:upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc, installation-guide:upgrading-che-in-restricted-environment.adoc
 
 [id="upgrading-{prod-id-short}-using-the-cli-management-tool-in-restricted-environment_{context}"]
 = Upgrading {prod-short} using the CLI management tool in a restricted environment
