--- a/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
+++ b/modules/administration-guide/pages/upgrading-che-using-the-cli-management-tool.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Upgrading {prod-short} using the CLI management tool
 :description: Upgrading {prod-short} using the CLI management tool
 :keywords: administration guide, upgrading-che-using-the-cli-management-tool
-:page-aliases: installation-guide:upgrading-che-using-the-cli-management-tool
+:navtitle: Upgrading {prod-short} using the CLI management tool
+:page-aliases: installation-guide:upgrading-che-using-the-cli-management-tool.adoc
 
 [id="upgrading-{prod-id-short}-using-the-cli-management-tool_{context}"]
 = Upgrading {prod-short} using the CLI management tool
