--- a/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
+++ b/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Using {prod-cli} to configure the `CheCluster` Custom Resource during installation
 :description: Using {prod-cli} to configure the `CheCluster` Custom Resource during installation
 :keywords: administration guide
-:page-aliases: installation-guide:using-chectl-to-configure-the-checluster-custom-resource-during-installation
+:navtitle: Using {prod-cli} to configure the `CheCluster` Custom Resource during installation
+:page-aliases: installation-guide:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
 
 [id="using-{prod-cli}-to-configure-the-checluster-custom-resource-during-installation_{context}"]
 = Using {prod-cli} to configure the `CheCluster` Custom Resource during installation
