--- a/modules/administration-guide/pages/using-the-cli-to-configure-the-checluster-custom-resource.adoc
+++ b/modules/administration-guide/pages/using-the-cli-to-configure-the-checluster-custom-resource.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Using the CLI to configure the CheCluster Custom Resource
 :description: Using the CLI to configure the CheCluster Custom Resource
 :keywords: administration guide
-:page-aliases: installation-guide:using-the-cli-to-configure-the-checluster-custom-resource, installation-guide:using-cli-to-configure-the-checluster-custom-resource 
+:navtitle: Using the CLI to configure the CheCluster Custom Resource
+:page-aliases: installation-guide:using-the-cli-to-configure-the-checluster-custom-resource.adoc, installation-guide:using-cli-to-configure-the-checluster-custom-resource.adoc
 
 [id="using-the-cli-to-configure-the-checluster-custom-resource_{context}"]
 = Using the CLI to configure the CheCluster Custom Resource
