--- a/modules/administration-guide/pages/branding-che-theia.adoc
+++ b/modules/administration-guide/pages/branding-che-theia.adoc
@@ -1,8 +1,9 @@
 :_content-type: PROCEDURE
-:navtitle: Branding Che-Theia
 :description: Customize the Che-Theia interface and branding
 :keywords: contributor-guide, branding-che-theia
-:page-aliases: contributor-guide:branding-che-theia
+:navtitle: Branding Che-Theia
+:page-aliases: contributor-guide:branding-che-theia.adoc
+
 :parent-context-of-branding-che-theia: {context}
 
 [id="branding-che-theia_{context}"]
