--- a/modules/administration-guide/pages/checluster-custom-resource-fields-reference.adoc
+++ b/modules/administration-guide/pages/checluster-custom-resource-fields-reference.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: `CheCluster` Custom Resource fields reference
 :description: `CheCluster` Custom Resource fields reference
 :keywords: administration guide, checluster, custom resource
-:page-aliases: installation-guide:checluster-custom-resource-fields-reference 
+:navtitle: `CheCluster` Custom Resource fields reference
+:page-aliases: installation-guide:checluster-custom-resource-fields-reference.adoc
 
 [id="checluster-custom-resources-fields-reference_{context}"]
 = `CheCluster` Custom Resource fields reference
