--- a/modules/administration-guide/pages/configuring-che.adoc
+++ b/modules/administration-guide/pages/configuring-che.adoc
@@ -1,11 +1,10 @@
 :_content-type: ASSEMBLY
-:navtitle: Configuring {prod-short}
 :description: Configuring methods for {prod-short}
 :keywords: administration guide, configuring, configuration
-:page-aliases: installation-guide:configuring-che, installation-guide:advanced-configuration, installation-guide:advanced-configuration-options, installation-guide:setting-up-the-keycloak-che-username-readonly-theme-for-the-eclipse-che-login-page, installation-guide:configuring-communication-between-che-components, installation-guide:configuring-storage-strategies, installation-guide:configuring-storage-types, installation-guide:configuring-the-number-of-workspaces-that-a-user-can-run, installation-guide:configuring-workspace-exposure-strategies, installation-guide:enabling-dev-workspace-operator, running-custom-registries, building-custom-registry-images, customizing-the-registries, advanced-configuration
+:navtitle: Configuring {prod-short}
+:page-aliases: installation-guide:configuring-che.adoc, installation-guide:advanced-configuration.adoc, installation-guide:advanced-configuration-options.adoc, installation-guide:setting-up-the-keycloak-che-username-readonly-theme-for-the-eclipse-che-login-page.adoc, installation-guide:configuring-communication-between-che-components.adoc, installation-guide:configuring-storage-strategies.adoc, installation-guide:configuring-storage-types.adoc, installation-guide:configuring-the-number-of-workspaces-that-a-user-can-run.adoc, installation-guide:configuring-workspace-exposure-strategies.adoc, installation-guide:enabling-dev-workspace-operator.adoc, running-custom-registries.adoc, building-custom-registry-images.adoc, customizing-the-registries.adoc, advanced-configuration.adoc
 
 [id="configuring-che_{context}"]
 = Configuring {prod-short}
 
 This section describes configuration methods and options for {prod}.
-
