--- a/modules/administration-guide/pages/configuring-ingresses.adoc
+++ b/modules/administration-guide/pages/configuring-ingresses.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Configuring {orch-ingress}
 :description: Configuring labels and annotations on each {orch-ingress}
 :keywords: administration guide, configuring, ingress, ingresses
-:page-aliases: installation-guide:configuring-ingresses
+:navtitle: Configuring {orch-ingress}
+:page-aliases: installation-guide:configuring-ingresses.adoc
 
 [id="adding-labels-and-annotations-to-ingresses_{context}"]
 = Adding labels and annotations to {orch-ingress}
@@ -39,4 +39,3 @@ spec:
 * xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
 
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
-
