--- a/modules/administration-guide/pages/configuring-oauth-2-for-gitlab.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-gitlab.adoc
@@ -2,7 +2,7 @@
 :description: Configuring OAuth 2.0 for GitLab
 :keywords: configuring-oauth, authorization, gitlab, oauth-2, oauth-2.0
 :navtitle: Configuring OAuth 2.0 for GitLab
-// :page-aliases:
+:page-aliases:
 
 [id="configuring-oauth-2-for-gitlab_{context}"]
 = Configuring OAuth 2.0 for GitLab
