--- a/modules/administration-guide/pages/configuring-server-logging.adoc
+++ b/modules/administration-guide/pages/configuring-server-logging.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Configuring server logging
 :description: Configuring server logging
 :keywords: administration-guide, configuring-server-logging
-:page-aliases: .:configuring-server-logging
+:navtitle: Configuring server logging
+:page-aliases: .:configuring-server-logging.adoc
 
 [id="configuring-sever-logging_{context}"]
 = Configuring server logging
