--- a/modules/administration-guide/pages/configuring-workspaces-nodeselector.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-nodeselector.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Configuring workspaces nodeSelector
 :description: Configuring workspaces nodeSelector
 :keywords: administration guide, configuring-workspaces-nodeselector
-:page-aliases: installation-guide:configuring-workspaces-nodeselector
+:navtitle: Configuring workspaces nodeSelector
+:page-aliases: installation-guide:configuring-workspaces-nodeselector.adoc
 
 [id="configuring-workspaces-nodeselector"]
 = Configuring workspaces nodeSelector
@@ -31,4 +31,3 @@ Pass the name of this newly created `StorageClass` to {prod-short} through the `
 * xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
 
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
-
