--- a/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
+++ b/modules/administration-guide/pages/defining-the-list-of-images-to-pull.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Defining the list of images
 :description: Defining the list of images
 :keywords: administration-guide, image-puller, configuration
-:page-aliases: .:defining-the-list-of-images-to-pull
+:navtitle: Defining the list of images
+:page-aliases: .:defining-the-list-of-images-to-pull.adoc
 
 [id="defining-the-list-of-images-to-pull_{context}"]
 = Defining the list of images to pull
