--- a/modules/administration-guide/pages/defining-the-memory-parameters-for-the-image-puller.adoc
+++ b/modules/administration-guide/pages/defining-the-memory-parameters-for-the-image-puller.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Defining the memory settings
 :description: Defining the memory settings
 :keywords: administration-guide, image-puller, configuration
-:page-aliases: .:defining-the-memory-parameters-for-the-image-puller
+:navtitle: Defining the memory settings
+:page-aliases: .:defining-the-memory-parameters-for-the-image-puller.adoc
 
 [id="proc_defining-the-memory-parameters-for-the-image-puller_{context}"]
 = Defining the memory parameters for the {image-puller-name-short}
