--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Git with self-signed certificates
 :description: Deploying {prod-short} with support for Git repositories with self-signed certificates
 :keywords: administration guide, deploying-che-with-support-for-git-repositories-with-self-signed-certificates
-:page-aliases: installation-guide:deploying-che-with-support-for-git-repositories-with-self-signed-certificates
+:navtitle: Git with self-signed certificates
+:page-aliases: installation-guide:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
 
 [id="deploying-{prod-id-short}-with-support-for-git-repositories-with-self-signed-certificates_{context}"]
 = Deploying {prod-short} with support for Git repositories with self-signed certificates
@@ -69,4 +69,3 @@ sslCAInfo = /etc/che/git/cert/ca.crt
 * xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
 
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
-
