--- a/modules/administration-guide/pages/devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/devworkspace-operator.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: {devworkspace} operator
 :description: {devworkspace} operator
 :keywords: administration-guide, workspace operator, devworkspace
-:page-aliases: .:devworkspace-operator
+:navtitle: {devworkspace} operator
+:page-aliases: .:devworkspace-operator.adoc
 
 [id="devworkspace-operator_{context}"]
 = {devworkspace} operator
