--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -1,7 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Enabling users to run multiple workspaces simultaneously
 :description: Enabling users to run multiple workspaces simultaneously
 :keywords: administration guide, number, workspaces
+:navtitle: Enabling users to run multiple workspaces simultaneously
+:page-aliases:
 
 [id="enabling-users-to-run-multiple-workspaces-simultaneously_{context}"]
 = Enabling users to run multiple workspaces simultaneously
