--- a/modules/administration-guide/pages/installing-che-locally.adoc
+++ b/modules/administration-guide/pages/installing-che-locally.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} locally
 :description: Installing {prod-short} locally
 :keywords: overview, running-che-locally, installing-che-locally
-:page-aliases: installation-guide:running-che-locally, installation-guide:installing-che-in-tls-mode-with-self-signed-certificates, overview:running-che-locally, installation-guide:installing-che-locally
+:navtitle: Installing {prod-short} locally
+:page-aliases: installation-guide:running-che-locally.adoc, installation-guide:installing-che-in-tls-mode-with-self-signed-certificates.adoc, overview:running-che-locally.adoc, installation-guide:installing-che-locally.adoc
 
 [id="installing-{prod-id-short}-locally_{context}"]
 = Installing {prod-short} locally
@@ -26,4 +26,3 @@ Choose one of the following procedures to start the {prod-short} Server using th
 
 * xref:installing-che-on-red-hat-openshift-local.adoc[]
 * xref:installing-che-on-minikube.adoc[]
-
