--- a/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} on OpenShift using CLI
 :description: Installing {prod-short} on OpenShift using CLI
 :keywords: overview, installing-che-on-openshift-4-using-cli
-:page-aliases: installation-guide:installing-che-on-openshift-4-using-cli, overview:installing-che-on-openshift-4-using-cli, installing-che-on-openshift-4-using-cli
+:navtitle: Installing {prod-short} on OpenShift using CLI
+:page-aliases: installation-guide:installing-che-on-openshift-4-using-cli.adoc, overview:installing-che-on-openshift-4-using-cli.adoc, installing-che-on-openshift-4-using-cli.adoc
 
 [id="installing-{prod-id-short}-on-openshift-using-the-cli-management-tool_{context}"]
 = Installing {prod-short} on OpenShift using the `{prod-cli}` management tool
@@ -40,4 +40,3 @@ $ {prod-cli} server:status
 ----
 $ {prod-cli} dashboard:open
 ----
-
