--- a/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
+++ b/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: Installing {prod-short} using storage classes
 :description: Installing {prod-short} using storage classes
 :keywords: administration guide, installing-che-using-storage-classes
-:page-aliases: installation-guide:installing-che-using-storage-classes
+:navtitle: Installing {prod-short} using storage classes
+:page-aliases: installation-guide:installing-che-using-storage-classes.adoc
 
 [id="installing-{prod-id-short}-using-storage-classes_{context}"]
 = Configuring storage classes
@@ -116,4 +116,3 @@ You must provide valid file permissions for volumes. You can do it using storage
 * xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
 
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
-
