--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {image-puller-name-short} on OpenShift using CLI
 :description: Installing {image-puller-name-short} on OpenShift using CLI
 :keywords: administration-guide, image-puller, openshift, openshift-templates, CLI
-:page-aliases: .:installing-image-puller-on-openshift-using-openshift-templates,installing-image-puller-on-openshift-using-openshift-templates
+:navtitle: Installing {image-puller-name-short} on OpenShift using CLI
+:page-aliases: .:installing-image-puller-on-openshift-using-openshift-templates.adoc,installing-image-puller-on-openshift-using-openshift-templates.adoc
 
 [id="installing-image-puller-on-openshift-by-using-the-cli_{context}"]
 = Installing {image-puller-name-short} on OpenShift by using the CLI
@@ -140,4 +140,3 @@ $ oc get deployment,daemonset,pod --namespace __<{image-puller-namespace}>__
 ----
 $ oc get configmap __<{image-puller-deployment-name}>__ --output yaml
 ----
-
