--- a/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
+++ b/modules/administration-guide/pages/installing-prometheus-and-grafana.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Installing Prometheus and Grafana
 :description: Installing Prometheus and Grafana
 :keywords: prometheus, grafana
-//:page-aliases:
+:navtitle: Installing Prometheus and Grafana
+:page-aliases:
 
 :parent-context-of-monitoring-the-dev-workspace-operator: {context}
 
