--- a/modules/administration-guide/pages/installing-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/pages/installing-the-chectl-management-tool.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Installing the {prod-cli} management tool
 :description: Installing the {prod-cli} management tool
 :keywords: overview, using-the-chectl-management-tool
-:page-aliases: installation-guide:using-the-chectl-management-tool, overview:using-the-chectl-management-tool, using-the-chectl-management-tool
+:navtitle: Installing the {prod-cli} management tool
+:page-aliases: installation-guide:using-the-chectl-management-tool.adoc, overview:using-the-chectl-management-tool.adoc, using-the-chectl-management-tool.adoc
 
 :parent-context-of-using-the-chectl-management-tool: {context}
 
