--- a/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
+++ b/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
@@ -2,7 +2,7 @@
 :description: OAuth for GitHub, GitLab, or Bitbucket
 :keywords: bitbucket
 :navtitle: OAuth for GitHub, GitLab, or Bitbucket
-// :page-aliases:
+:page-aliases:
 
 [id="oauth-for-github-gitlab-or-bitbucket_{context}"]
 = OAuth for GitHub, GitLab, or Bitbucket
