--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Removing user data
 :description: Removing user data
 :keywords: administration-guide, removing-user-data
-:page-aliases: .:removing-user-data
+:navtitle: Removing user data
+:page-aliases: .:removing-user-data.adoc
 
 [id="removing-user-data_{context}"]
 = Removing user data
