--- a/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
+++ b/modules/administration-guide/pages/specifying-the-update-approval-strategy.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Specifying the update approval strategy
 :description: Specifying the update approval strategy
 :keywords: administration guide, upgrading-che-using-operatorhub
-:page-aliases: installation-guide:upgrading-che-using-operatorhub
+:navtitle: Specifying the update approval strategy
+:page-aliases: installation-guide:upgrading-che-using-operatorhub.adoc
 
 [id="specifying-the-{prod-id-short}-operator-update-approval-strategy-using-the-web-console_{context}"]
 = Specifying the update approval strategy for the {prod} Operator
