--- a/modules/administration-guide/pages/supported-platforms.adoc
+++ b/modules/administration-guide/pages/supported-platforms.adoc
@@ -1,11 +1,10 @@
 :_content-type: ASSEMBLY
-:navtitle: Supported platforms
 :description: Supported platforms
 :keywords: administration guide, supported-platforms
-:page-aliases: installation-guide:supported-platforms
+:navtitle: Supported platforms
+:page-aliases: installation-guide:supported-platforms.adoc
 
 [id="supported-platforms_{context}"]
 = Supported platforms
 
 include::example$snip_{project-context}-supported-platforms-and-installation-methods.adoc[leveloffset=+1]
-
