--- a/modules/administration-guide/pages/understanding-the-checluster-custom-resource.adoc
+++ b/modules/administration-guide/pages/understanding-the-checluster-custom-resource.adoc
@@ -1,8 +1,8 @@
 :_content-type: CONCEPT
-:navtitle: Understanding the `CheCluster` Custom Resource
 :description: Understanding the `CheCluster` Custom Resource
 :keywords: administration guide, understanding-the-checluster-custom-resource, configuring-che
-:page-aliases: installation-guide:understanding-the-checluster-custom-resource, installation-guide:configuring-the-che-installation
+:navtitle: Understanding the `CheCluster` Custom Resource
+:page-aliases: installation-guide:understanding-the-checluster-custom-resource.adoc, installation-guide:configuring-the-che-installation.adoc
 
 [id="understanding-the-checluster-custom-resource_{context}"]
 = Understanding the `CheCluster` Custom Resource
@@ -27,5 +27,3 @@ The {orch-name} platform applies the configuration to each component, and create
 * link:https://docs.openshift.com/container-platform/latest/operators/understanding/olm-what-operators-are.html[Understanding Operators]
 
 * {link-understanding-custom-resources}
-
-
