--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
-:navtitle: Uninstalling Che
 :description: Uninstalling Che
 :keywords: administration guide, uninstalling-che
-:page-aliases: installation-guide:uninstalling-che, installation-guide:uninstalling-che-after-operatorhub-installation, uninstalling-che-on-openshift, installation-guide:uninstalling-che-after-chectl-installation, uninstalling-che-by-using-chectl
+:navtitle: Uninstalling Che
+:page-aliases: installation-guide:uninstalling-che.adoc, installation-guide:uninstalling-che-after-operatorhub-installation.adoc, uninstalling-che-on-openshift.adoc, installation-guide:uninstalling-che-after-chectl-installation.adoc, uninstalling-che-by-using-chectl.adoc
 
 :parent-context-of-uninstalling-che: {context}
 
