--- a/modules/administration-guide/pages/upgrading-che.adoc
+++ b/modules/administration-guide/pages/upgrading-che.adoc
@@ -1,8 +1,8 @@
 :_content-type: ASSEMBLY
-:navtitle: Upgrading {prod-short}
 :description: Upgrading {prod-short}
 :keywords: administration guide, upgrading-che
-:page-aliases: installation-guide:upgrading-che, installation-guide:upgrading-che-known-issues, installation-guide:rolling-back-a-che-upgrade,installation-guide: upgrading-che-namespace-strategies-other-than-per-user
+:navtitle: Upgrading {prod-short}
+:page-aliases: installation-guide:upgrading-che.adoc, installation-guide:upgrading-che-known-issues.adoc, installation-guide:rolling-back-a-che-upgrade.adoc, installation-guide:upgrading-che-namespace-strategies-other-than-per-user.adoc, upgrading-che-namespace-strategies-other-than-per-user.adoc
 
 :parent-context-of-upgrading-che: {context}
 
