--- a/modules/extensions/pages/extensions.adoc
+++ b/modules/extensions/pages/extensions.adoc
@@ -1,8 +1,8 @@
 :navtitle: Extensions
 :keywords: extensions
 :page-aliases: eclipse-che4z, java-lombok
+:description: {prod-short} extensions list.
 
 = Extensions
 
 include::../nav.adoc[lines=2..-1]
-
