--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -16,6 +16,7 @@
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
 * xref:customizing-workspace-components.adoc[]
+* xref:devfile-introduction.adoc[]
 * xref:selecting-a-workspace-ide.adoc[]
 ** xref:selecting-an-ide-by-using-a-url-parameter.adoc[]
 ** xref:specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc[]
