--- a/modules/end-user-guide/pages/customizing-workspace-components.adoc
+++ b/modules/end-user-guide/pages/customizing-workspace-components.adoc
@@ -12,7 +12,7 @@ To customize workspace components:
 
 * xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[Choose a Git repository for your workspace].
 
-* Use a devfile that meets the latest devfile 2 specification. See link:https://devfile.io/docs/2.1.0/overview[Devfile User Guide].
+* xref:devfile-introduction.adoc[Use a devfile]
 
 * xref:selecting-a-workspace-ide.adoc[Select and customize your in-browser IDE].
 
