fix: review of Ihor's PR

--- a/modules/administration-guide/partials/proc_applying-an-oauth-consumer-secret-in-the-bitbucket-cloud.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-consumer-secret-in-the-bitbucket-cloud.adoc
@@ -1,21 +1,21 @@
 :_content-type: PROCEDURE
-:description: Applying the Bitbucket OAuth consumer Secret
-:keywords: bitbucket, apply, secret, bitbucket-consumer, bitbucket-client-secret
-:navtitle: Applying the Bitbucket OAuth consumer Secret
+:description: Applying an OAuth consumer Secret in the Bitbucket Cloud
+:keywords: bitbucket, bitbucket-cloud, oauth-consumer, bitbucket-consumer, oauth-consumer-secret, bitbucket-client-secret
+:navtitle: Applying an OAuth consumer Secret in the Bitbucket Cloud
 // :page-aliases:
 
-[id="applying-the-bitbucket-oauth-consumer-secret_{context}"]
-= Applying the Bitbucket OAuth consumer Secret
+[id="applying-an-oauth-consumer-secret-in-the-bitbucket-cloud_{context}"]
+= Applying an OAuth consumer Secret in the Bitbucket Cloud
 
-Prepare and apply the Bitbucket OAuth consumer Secret.
+Prepare and apply an OAuth consumer Secret in the Bitbucket Cloud.
 
 .Prerequisites
 
-* Setting up the Bitbucket OAuth consumer is completed.
+* The OAuth consumer is set up in the Bitbucket Cloud.
 
 * The Base64-encoded values, which were generated when setting up the Bitbucket OAuth consumer, are prepared:
-** *Bitbucket OAuth consumer Key*
-** *Bitbucket OAuth consumer Secret*
+** Bitbucket OAuth consumer Key
+** Bitbucket OAuth consumer Secret
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
