--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-consumer-in-the-bitbucket-cloud.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-consumer-in-the-bitbucket-cloud.adoc
@@ -1,36 +1,34 @@
 :_content-type: PROCEDURE
-:description: Setting up the Bitbucket OAuth consumer
-:keywords: bitbucket, bitbucket-application, bitbucket-oauth-consumer, oauth-application
-:navtitle: Setting up the Bitbucket OAuth consumer
+:description: Setting up an OAuth consumer in the Bitbucket Cloud
+:keywords: bitbucket, bitbucket-cloud, oauth-consumer, bitbucket-oauth-consumer, oauth-application
+:navtitle: Setting up an OAuth consumer in the Bitbucket Cloud
 // :page-aliases:
 
-[id="setting-up-the-bitbucket-saas-oauth-consumer_{context}"]
-= Setting up the Bitbucket OAuth consumer
+[id="setting-up-an-oauth-consumer-in-the-bitbucket-cloud_{context}"]
+= Setting up an OAuth consumer in the Bitbucket Cloud
 
-Set up a Bitbucket OAuth consumer using OAuth 2.0.
+Set up an OAuth consumer for OAuth 2.0 in the Bitbucket Cloud.
 
 .Prerequisites
 
-* You are logged in to Bitbucket.
+* You are logged in to the Bitbucket Cloud.
 * link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
 
-. Click your avatar and go to *All workspaces* page.
+. Click your avatar and go to the *All workspaces* page.
 
 . Select a workspace and click it.
 
-. Go to menu:Settings[OAuth consumers] and click *Add consumer*.
+. Go to menu:Settings[OAuth consumers > Add consumer].
 
 . Enter *{prod-short}* as the *Name*.
 
 . Enter `pass:c,a,q[{prod-url}]/api/oauth/callback` as the *Callback URL*.
 
-. Under *Permissions*, check all of the `Account` and `Repositories` checkboxes.
+. Under *Permissions*, check all of the *Account* and *Repositories* checkboxes, and *Save*.
 
-. Click *Save*.
-
-. Expand the added consumer, copy the *Key* value and encode it to Base64 for use when applying the Bitbucket OAuth consumer Secret:
+. Expand the added consumer and then copy the *Key* value and encode it to Base64 for use when applying the Bitbucket OAuth consumer Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
