--- a/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
+++ b/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
@@ -1,15 +1,14 @@
 :_content-type: CONCEPT
-:description: OAuth for GitHub, GitLab, Bitbucket or Bitbucket SAAS
+:description: OAuth for GitHub, GitLab, or Bitbucket
 :keywords: bitbucket
-:navtitle: OAuth for GitHub, GitLab, Bitbucket or Bitbucket SAAS
+:navtitle: OAuth for GitHub, GitLab, or Bitbucket
 // :page-aliases:
 
 [id="oauth-for-github-gitlab-or-bitbucket_{context}"]
-= OAuth for GitHub, GitLab, Bitbucket or Bitbucket SAAS
+= OAuth for GitHub, GitLab, or Bitbucket
 
 To enable users to work with remote Git repositories:
 
 * xref:configuring-oauth-2-for-github.adoc[]
 * xref:configuring-oauth-2-for-gitlab.adoc[]
-* xref:configuring-oauth-1-for-bitbucket.adoc[]
-* xref:configuring-oauth-2-for-bitbucket.adoc[]
+* Configuring xref:configuring-oauth-1-for-a-bitbucket-server.adoc[OAuth 1.0 for a Bitbucket Server] or xref:configuring-oauth-2-for-the-bitbucket-cloud.adoc[OAuth 2.0 for the Bitbucket Cloud]
