--- a/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
@@ -1,23 +1,23 @@
 :_content-type: PROCEDURE
-:description: Setting up the Bitbucket application link
-:keywords: bitbucket, bitbucket-application-link, application-link
-:navtitle: Setting up the Bitbucket application link
+:description: Setting up an application link on the Bitbucket Server
+:keywords: bitbucket, bitbucket-server, application-link
+:navtitle: Setting up an application link on the Bitbucket Server
 // :page-aliases:
 
-[id="setting-up-the-bitbucket-application-link_{context}"]
-= Setting up the Bitbucket application link
+[id="setting-up-an-application-link-on-the-bitbucket-server_{context}"]
+= Setting up an application link on the Bitbucket Server
 
-Set up a Bitbucket application link using OAuth 1.0.
+Set up an application link for OAuth 1.0 on the Bitbucket Server.
 
 .Prerequisites
 
-* You are logged in to Bitbucket.
+* You are logged in to the Bitbucket Server.
 * link:https://www.openssl.org/[`openssl`] is installed in the operating system you are using.
 * link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
 
-. On a command line, run the commands to create the necessary files for the next steps and for use when applying the Bitbucket application link Secret:
+. On a command line, run the commands to create the necessary files for the next steps and for use when applying the application link Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
