fix: final fixes

--- a/modules/administration-guide/pages/configuring-oauth-1-for-a-bitbucket-server.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-1-for-a-bitbucket-server.adoc
@@ -10,8 +10,8 @@
 To enable users to work with a remote Git repository that is hosted on a Bitbucket Server:
 
 . Set up an application link (OAuth 1.0) on the Bitbucket Server.
-. Apply an application link Secret on the Bitbucket Server.
+. Apply an application link Secret for the Bitbucket Server.
 
 include::partial$proc_setting-up-an-application-link-on-the-bitbucket-server.adoc[leveloffset=+1]
 
-include::partial$proc_applying-an-application-link-secret-on-the-bitbucket-server.adoc[leveloffset=+1]
+include::partial$proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc[leveloffset=+1]
