--- a/modules/administration-guide/pages/configuring-oauth-2-for-the-bitbucket-cloud.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-the-bitbucket-cloud.adoc
@@ -10,8 +10,8 @@
 You can enable users to work with a remote Git repository that is hosted in the Bitbucket Cloud:
 
 . Set up an OAuth consumer (OAuth 2.0) in the Bitbucket Cloud.
-. Apply an Bitbucket OAuth consumer Secret in the Bitbucket Cloud.
+. Apply an OAuth consumer Secret for the Bitbucket Cloud.
 
 include::partial$proc_setting-up-an-oauth-consumer-in-the-bitbucket-cloud.adoc[leveloffset=+1]
 
-include::partial$proc_applying-an-oauth-consumer-secret-in-the-bitbucket-cloud.adoc[leveloffset=+1]
+include::partial$proc_applying-an-oauth-consumer-secret-for-the-bitbucket-cloud.adoc[leveloffset=+1]
