--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -1,13 +1,13 @@
 :_content-type: PROCEDURE
-:description: Applying an application link Secret on the Bitbucket Server
+:description: Applying an application link Secret for the Bitbucket Server
 :keywords: bitbucket, bitbucket-server, application-link, bitbucket-secret
-:navtitle: Applying an application link Secret on the Bitbucket Server
+:navtitle: Applying an application link Secret for the Bitbucket Server
 // :page-aliases:
 
-[id="applying-an-application-link-secret-on-the-bitbucket-server_{context}"]
-= Applying an application link Secret on the Bitbucket Server
+[id="applying-an-application-link-secret-for-the-bitbucket-server_{context}"]
+= Applying an application link Secret for the Bitbucket Server
 
-Prepare and apply the application link Secret on the Bitbucket Server.
+Prepare and apply the application link Secret for the Bitbucket Server.
 
 .Prerequisites
 
