--- a/modules/administration-guide/partials/proc_applying-an-oauth-consumer-secret-for-the-bitbucket-cloud.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-consumer-secret-for-the-bitbucket-cloud.adoc
@@ -1,13 +1,13 @@
 :_content-type: PROCEDURE
-:description: Applying an OAuth consumer Secret in the Bitbucket Cloud
+:description: Applying an OAuth consumer Secret for the Bitbucket Cloud
 :keywords: bitbucket, bitbucket-cloud, oauth-consumer, bitbucket-consumer, oauth-consumer-secret, bitbucket-client-secret
-:navtitle: Applying an OAuth consumer Secret in the Bitbucket Cloud
+:navtitle: Applying an OAuth consumer Secret for the Bitbucket Cloud
 // :page-aliases:
 
-[id="applying-an-oauth-consumer-secret-in-the-bitbucket-cloud_{context}"]
-= Applying an OAuth consumer Secret in the Bitbucket Cloud
+[id="applying-an-oauth-consumer-secret-for-the-bitbucket-cloud_{context}"]
+= Applying an OAuth consumer Secret for the Bitbucket Cloud
 
-Prepare and apply an OAuth consumer Secret in the Bitbucket Cloud.
+Prepare and apply an OAuth consumer Secret for the Bitbucket Cloud.
 
 .Prerequisites
 
