--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -7,7 +7,7 @@ link:https://devfile.io/[Devfiles] are `yaml` text files used for development en
 
 .Devfile and Universal Developer Image
 
-A devfile isn't required to start a workspace. If you don't include a devfile in your project repository, {prod} automatically loads a default devfile with a Universal Developer Image (UDI).
+You do not need a devfile to start a workspace. If you do not include a devfile in your project repository, {prod} automatically loads a default devfile with a Universal Developer Image (UDI).
 
 .{prod-short} devfile registry
 
