--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -227,7 +227,7 @@ $ minikube start \
     --extra-config=apiserver.oidc-ca-file=/etc/ca-certificates/keycloak-ca.crt
 ----
 
-. Wait until {identity-provider} pod is ready:
+. Wait until the {identity-provider} pod is ready:
 +
 [subs="+attributes"]
 ----
