--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -234,7 +234,7 @@ $ minikube start \
 $ {orch-cli} wait --for=condition=ready pod -l app=keycloak -n keycloak --timeout=120s
 ----
 
-. Configure {identity-provider} to create realm, client and user:
+. Configure the {identity-provider} to create the realm, client, and user:
 +
 IMPORTANT: This step has to be performed every time the minikube cluster is started.
 +
