--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -271,7 +271,7 @@ $ {orch-cli} exec deploy/keycloak -n keycloak -- bash -c \
         --new-password test"
 ----
 
-. Copy {identity-provider} CA certificate into {prod-namespace}:
+. Copy the {identity-provider} CA certificate into the `{prod-namespace}` namespace:
 +
 [subs="+attributes"]
 ----
