--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -203,7 +203,7 @@ spec:
 EOF
 ----
 
-. Save {identity-provider} CA certificate:
+. Save the {identity-provider} CA certificate:
 +
 [subs="+attributes"]
 ----
