--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -210,7 +210,7 @@ EOF
 $ {orch-cli} get secret ca.crt -o "jsonpath={.data['ca\.crt']}" -n keycloak | base64 -d > keycloak-ca.crt
 ----
 
-. Copy {identity-provider} CA certificate into `minikube`:
+. Copy the {identity-provider} CA certificate into Minikube:
 +
 ----
 $ minikube ssh sudo "mkdir -p /etc/ca-certificates" && \
