--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -217,7 +217,7 @@ $ minikube ssh sudo "mkdir -p /etc/ca-certificates" && \
   minikube cp keycloak-ca.crt /etc/ca-certificates/keycloak-ca.crt
 ----
 
-. Configure `minikube` to use {identity-provider} as OIDC identity provider:
+. Configure Minikube to use {identity-provider} as the OIDC provider:
 +
 ----
 $ minikube start \
