--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -1,6 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Installing {prod-short} on Minikube with {identity-provider} as OIDC Identity Provider
-:description: Installing {prod-short} on Minikube with {identity-provider} as OIDC Identity Provider
+:description: Installing {prod-short} on Minikube with {identity-provider} as the OIDC provider
 :keywords: overview, installing-che-on-minikube-keycloak-oidc
 :page-aliases: installation-guide:installing-che-on-minikube-keycloak-oidc, overview:installing-che-on-minikube-keycloak-oidc
 
