--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -236,7 +236,7 @@ $ {orch-cli} wait --for=condition=ready pod -l app=keycloak -n keycloak --timeou
 
 . Configure the {identity-provider} to create the realm, client, and user:
 +
-IMPORTANT: This step has to be performed every time the minikube cluster is started.
+IMPORTANT: You must do this each time you start the Minikube cluster.
 +
 [subs="+attributes"]
 ----
